# time-series-forecast-transformer

./: .dockerignore  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  add-chronos-timesfm-finetune-pipeline.patch  docker-compose.gpu.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  codeql.yml  lint.yml
backend/: .coverage  .env  Dockerfile  docker-compose.gpu.yml  pyproject.toml  requirements.test.txt  requirements.txt
backend/outputs/: m4_monthly_holdout_actual.csv
backend/scripts/: api_example.py
backend/src/local_ts_forecast/: __init__.py  api.py  benchmark_datasets.py  cli.py  forecaster.py  foundation_adapter.py  io.py  plotting.py  sample_data.py  settings.py  torch_training.py
backend/tests/: test_api.py  test_foundation_adapter.py  test_training_pipeline.py
data/: sample_data.csv  sample_data.xlsx
frontend/: Dockerfile  Dockerfile.test
frontend/app/: index.html  package.json  vite.config.ts
frontend/app/src/: App.tsx  api.ts  backend.ts  csv.ts  main.ts  react-native-web.d.ts  types.ts
scripts/: compare_forecast_metrics.py  compare_metrics.py  create_holdouts.py
